make cycletime computation more performant